fix: change list to pagenate
